# rpc-rust

./: Cargo.toml  README.md  build.rs  docker-compose.yml  lista.txt
proto/: procedures.proto
src/: client.rs  main.rs  server.rs
