[package]
name = "rpc-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "procedures-server"
path = "src/server.rs"

[[bin]]
name = "procedures-client"
path = "src/client.rs"

[dependencies]
prost = "0.11.9"
tonic = "0.9.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.9.2"